best-practices/require-ro-rootfs/.chainsaw-test/bad-pod-notall.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod-roroot
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox-again
    image: busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-roroot
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
  - name: busybox-again
    image: busybox:1.35
