best-practices/require-ro-rootfs/.chainsaw-test/good-podcontrollers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reqro-gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
        foo: bar
  template:
    metadata:
      labels:
        foo: bar
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          readOnlyRootFilesystem: true
      - name: busybox-again
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          readOnlyRootFilesystem: true
      initContainers:
      - name: busybox-init
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          readOnlyRootFilesystem: true
      - name: busybox-again-init
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          readOnlyRootFilesystem: true
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: reqprobes-goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              readOnlyRootFilesystem: true
          - name: busybox-again
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              readOnlyRootFilesystem: true
          initContainers:
          - name: busybox-init
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              readOnlyRootFilesystem: true
          - name: busybox-again-init
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              readOnlyRootFilesystem: true
