best-practices/require-ro-rootfs/.chainsaw-test/good-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01-roroot
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
  initContainers:
  - name: busybox-init
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02-roroot
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
  - name: busybox-again
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
  initContainers:
  - name: busybox-init
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
  - name: busybox-again-init
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
