best-practices/require-ro-rootfs/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-ro-rootfs
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
